--- a/2005.md
+++ b/2005.md
@@ -662,17 +662,17 @@ https://webui.vhls.ru.com/lb/premium135/index.m3u8
 https://webui.vhls.ru.com/lb/premium139/index.m3u8
 
 #EXTINF:-1 tvg-id="SuperSportLaLiga.za" tvg-logo="https://i.postimg.cc/s2Y06qgM/tv-station-supersport-seven-297.png" group-title="SPORTS",SUPER SPORT LALIGA
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium415/index.m3u8
 
 #EXTINF:-1 tvg-id="SuperSportPremierLeague.za" tvg-logo="https://i.postimg.cc/WbZmwr33/tv-station-supersport-nine-299.png" group-title="SPORTS",SUPER SPORT PREMIER LEAGUE
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium414/index.m3u8
 
 #EXTINF:-1 tvg-id="SuperSportMaximo1.za" tvg-logo="https://i.ibb.co/64tqpW0/unnamed-3-modified-1.png" group-title="SPORTS",SUPER SPORTS MAXIMO 1
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium572/index.m3u8
 
@@ -849,12 +849,12 @@ https://dukun.masuk.id/57337005c17a518a3cee71d5170f05210698fd0b11a8f77733c08de39
 https://rmtv.akamaized.net/hls/live/2043154/rmtv-en-web/bitrate_3.m3u8
 
 #EXTINF:-1 tvg-id="ESPN.us" tvg-logo="https://i.ibb.co/CVtMtm0/0x0-modified.png" group-title="SPORTS",ESPN USA
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium44/index.m3u8
 
 #EXTINF:-1 tvg-id="ESPN2.us" tvg-logo="https://i.ibb.co/ZHbHK1Z/Desain-tanpa-judul-44-modified.png" group-title="SPORTS",ESPN 2 USA
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium45/index.m3u8
 
@@ -944,7 +944,7 @@ https://dukun.masuk.id/57337005c17a518a3cee71d5170f05210698fd0b11a8f77733c08de39
 https://webui.vhls.ru.com/lb/premium39/index.m3u8
 
 #EXTINF:-1 tvg-id="FoxSports2.us" tvg-logo="https://i.ibb.co/vdCs13m/Desain-tanpa-judul-66-modified.png" group-title="SPORTS",FOX SPORTS 2 US
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium40/index.m3u8
 
@@ -1000,42 +1000,42 @@ https://dukun.masuk.id/57337005c17a518a3cee71d5170f05210698fd0b11a8f77733c08de39
 https://ad2017.vhls.ru.com/lb/premium445/index.m3u8
 
 #EXTINF:-1 tvg-id="DAZN2Spain.uk" group-title="SPORTS" tvg-logo="https://i.ibb.co/j60Nb0p/DAZN-sports-modified.png", DAZN 2
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium446/index.m3u8
 
 #EXTINF:-1 tvg-id="DAZN3Spain.uk" group-title="SPORTS" tvg-logo="https://i.ibb.co/j60Nb0p/DAZN-sports-modified.png", DAZN 3
-#EXTVLCOPT:http-referrer=https://streamservicehd.click
+#EXTVLCOPT:http-referrer=https://streamservicehd.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium447/index.m3u8
 
 #EXTINF:-1 tvg-id="DAZN4Spain.uk" group-title="SPORTS" tvg-logo="https://i.ibb.co/j60Nb0p/DAZN-sports-modified.png", DAZN 4
-#EXTVLCOPT:http-referrer=https://streamservice.click
+#EXTVLCOPT:http-referrer=https://streamservice.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium448/index.m3u8
 
 #EXTINF:-1 tvg-id="DAZNF1.es" group-title="SPORTS" tvg-logo="https://i.ibb.co/j60Nb0p/DAZN-sports-modified.png", DAZN F1
-#EXTVLCOPT:http-referrer=https://streamservice.click
+#EXTVLCOPT:http-referrer=https://streamservice.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium537/index.m3u8
 
 #EXTINF:-1 tvg-id="ZiggoSportRacing.nl" tvg-logo="https://i.ibb.co/GvSdq1H/tv-station-ziggo-racing-288-modified.png" group-title="SPORTS",ZIGGO SPORT RACING
-#EXTVLCOPT:http-referrer=https://streamservice.click
+#EXTVLCOPT:http-referrer=https://streamservice.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium396/index.m3u8
 
 #EXTINF:-1 tvg-id="ZiggoSportDocu.nl" tvg-logo="https://i.ibb.co/fCXZ93k/tv-station-ziggo-docu-290-modified.png" group-title="SPORTS",ZIGGO SPORTS DOCU
-#EXTVLCOPT:http-referrer=https://streamservice.click
+#EXTVLCOPT:http-referrer=https://streamservice.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium383/index.m3u8
 
 #EXTINF:-1 tvg-id="ZiggoSportSelect.nl" tvg-logo="https://i.ibb.co/cF5CFB0/tv-station-ziggo-select-285-modified.png" group-title="SPORTS",ZIGGO SPORT SELECT
-#EXTVLCOPT:http-referrer=https://streamservice.click
+#EXTVLCOPT:http-referrer=https://streamservice.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://zcri.vhls.ru.com/lb/premium393/index.m3u8
 
 #EXTINF:-1 tvg-id="ZiggoSportVoetbal.nl" tvg-logo="https://i.ibb.co/SrTd4yV/tv-station-ziggo-voetbal-286-modified.png" group-title="SPORTS",ZIGGO SPORT VOTEBALL
-#EXTVLCOPT:http-referrer=https://streamservice.click
+#EXTVLCOPT:http-referrer=https://streamservice.click/
 #EXTVLCOPT:http-user-agent=Mozilla/5.0
 https://webui.vhls.ru.com/lb/premium398/index.m3u8
 
